@@ -27,7 +27,7 @@ class CsvToDbTest {
 
         final SensorDataDb sensorDataDb = new SensorDataDb(sensorTableName);
         final List<SensorData> sensorDataList = sensorDataDb.read();
-        final SensorData lastSensorData = sensorDataList.get(sensorDataList.size() - 1);
+        final SensorData lastSensorData = sensorDataList.getLast();
         assertThat(lastSensorData.getTemperature()).isPresent().hasValueSatisfying(
                 temperature -> assertThat(temperature.getCelsius()).isCloseTo(21.0, within(0.001)));
         assertThat(lastSensorData.getHumidity()).isPresent().hasValueSatisfying(
